<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.appportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="28dp"
        android:textSize="28sp"
        android:text="@string/appHeader"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text0"
        android:id="@+id/button0"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:onClick="printPurpose"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text1"
        android:id="@+id/button1"
        android:layout_below="@+id/button0"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:onClick="printPurpose"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text2"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:onClick="printPurpose"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:onClick="printPurpose"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:onClick="printPurpose"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_text5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@color/colorAccent"
        android:onClick="printPurpose"/>
</RelativeLayout>